// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectableCard > checkbox > renders correctly with aria label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: none; --_18vc4d32: auto;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="test"
            class="styles__17da2jl6"
            id="_r_1t_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with checked prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="true"
      data-disabled="false"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: none; --_18vc4d32: auto;"
      tabindex="0"
    >
      <div
        aria-disabled="false"
        class="styles__475tndd styles__9pjq8o1"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-checked="true"
          aria-invalid="false"
          aria-label="test"
          checked=""
          class="styles__9pjq8o2"
          id="_r_23_"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="choice"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with complex children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_default__475tnd2 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="true"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
    >
      <div
        aria-disabled="true"
        class="styles__475tndd styles__9pjq8o1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="styles__9pjq8o2"
          disabled=""
          id="_r_2h_"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="choice"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn3: 1;"
          >
            <label
              class="styles__9pjq8o7 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_2h_"
            >
              test
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="true"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        <div
          style="background: gray; color: gray;"
        >
          Complex radio card
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="styles__17da2jl6"
            id="_r_1p_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            for="_r_1p_"
          >
            test
          </label>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with disabled prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="true"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: none; --_18vc4d32: auto;"
    >
      <div
        aria-disabled="true"
        class="styles__475tndd styles__9pjq8o1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          aria-label="test"
          class="styles__9pjq8o2"
          disabled=""
          id="_r_26_"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="choice"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with illustration 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_illustration__475tnd4 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__toi52u0 styles_alignItems_stretch_xxsmall__toi52u7 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%; --_4k0ekn3: 1;"
      >
        <div
          class="styles__475tnda styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles__9pjq8o1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="styles__9pjq8o2"
              id="_r_2l_"
              name="label-14"
              tabindex="-1"
              type="checkbox"
              value="label-14"
            />
            <svg
              class="styles__9pjq8o3"
              fill="none"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="styles__9pjq8o4"
                  height="16"
                  rx="0.125rem"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  class="styles__9pjq8o5"
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
              style="--_4k0ekn3: 1;"
            >
              <div
                class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <label
                  class="styles__9pjq8o7 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_2l_"
                >
                  label
                </label>
              </div>
            </div>
          </div>
          <div
            class="styles__475tndb styles__475tndc styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            data-has-default-cursor="false"
            data-has-label="true"
            style="--_4k0ekn0: 100%;"
          >
            Offer the best experience to your Mac, iPhone and iPad users with VNC, the remote desktop-sharing protocol. Learn more
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        />
        <div
          class="styles__475tnd8"
        >
          <img
            alt="illustration"
            class="styles__475tnd9"
            src="/src/components/SelectableCard/__tests__/illustrationTest.svg"
            width="220"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with indented disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        aria-disabled="false"
        class="styles__475tndd styles__9pjq8o1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          class="styles__9pjq8o2"
          id="_r_2p_"
          name="label-14"
          tabindex="-1"
          type="checkbox"
          value="label-14"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn3: 1;"
          >
            <label
              class="styles__9pjq8o7 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_2p_"
            >
              label
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="true"
        style="--_4k0ekn0: 100%;"
      >
        Offer the best experience to your Mac, iPhone and iPad users with VNC, the remote desktop-sharing protocol. Learn more
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with isError prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-error="true"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        aria-disabled="false"
        class="styles__475tndd styles__9pjq8o1"
        data-checked="false"
        data-error="true"
      >
        <input
          aria-checked="false"
          aria-describedby="_r_29_-hint"
          aria-invalid="true"
          class="styles__9pjq8o2"
          id="_r_29_"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="choice"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          style="--_4k0ekn3: 1;"
        >
          <div
            class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            style="--_4k0ekn3: 1;"
          >
            <label
              class="styles__9pjq8o7 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_29_"
            >
              test
            </label>
          </div>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with productIcon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_icon__475tnd3 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__toi52u0 styles_alignItems_stretch_xxsmall__toi52u7 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%; --_4k0ekn3: 1;"
      >
        <div
          class="styles__475tnda styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles__9pjq8o1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="styles__9pjq8o2"
              id="_r_2t_"
              name="label-14"
              tabindex="-1"
              type="checkbox"
              value="label-14"
            />
            <svg
              class="styles__9pjq8o3"
              fill="none"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="styles__9pjq8o4"
                  height="16"
                  rx="0.125rem"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  class="styles__9pjq8o5"
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
              style="--_4k0ekn3: 1;"
            >
              <div
                class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <label
                  class="styles__9pjq8o7 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_2t_"
                >
                  label
                </label>
              </div>
            </div>
          </div>
          <div
            class="styles__475tndb styles__475tndc styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            data-has-default-cursor="false"
            data-has-label="true"
            style="--_4k0ekn0: 100%;"
          >
            Offer the best experience to your Mac, iPhone and iPad users with VNC, the remote desktop-sharing protocol. Learn more
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        >
          <svg
            class="styles_large__11yzunl0 styles_primary__11yzunl5"
            height="64"
            viewBox="0 0 64 64"
            width="64"
          >
            <g
              class="MacMini"
            >
              <g
                class=".Square"
              >
                <path
                  class="fillWeak"
                  d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                  fill="#F1EEFC"
                />
              </g>
              <g
                class="Icon MacMini"
              >
                <g
                  class="MacMini"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    class="fill"
                    d="M40 8.5c5.523 0 10 4.477 10 10v16c0 5.523-4.477 10-10 10h-7v5.17a3 3 0 0 1 1.83 1.83h13.334a1 1 0 0 1 .117 1.993l-.117.007H34.83a3.001 3.001 0 0 1-5.658 0H15a1 1 0 0 1-.117-1.993L15 51.5h14.171A3 3 0 0 1 31 49.67V44.5h-7c-5.523 0-10-4.477-10-10v-16c0-5.523 4.477-10 10-10zm-8 34h-8l-.25-.004A8 8 0 0 1 16 34.5v-16l.004-.25A8 8 0 0 1 24 10.5h16l.25.004A8 8 0 0 1 48 18.5v16l-.004.25A8 8 0 0 1 40 42.5zm0 9a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
                    fill="#521094"
                  />
                  <path
                    class="fillStrong"
                    d="M45 18.5a5 5 0 0 0-5-5H24a5 5 0 0 0-5 5v16a5 5 0 0 0 5 5h16a5 5 0 0 0 5-5zm-21-3h16l.176.005A3 3 0 0 1 43 18.5v16l-.005.176A3 3 0 0 1 40 37.5H24l-.176-.005A3 3 0 0 1 21 34.5v-16l.005-.176A3 3 0 0 1 24 15.5"
                    fill="#A060F6"
                  />
                  <path
                    class="fillStrong"
                    d="M34.5 24h-5v5h5zm-5-2a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h5a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2z"
                    fill="#A060F6"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with showTick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="checkbox"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: auto;"
      tabindex="0"
    >
      <div
        aria-disabled="false"
        class="styles__475tndd styles__9pjq8o1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-checked="false"
          aria-invalid="false"
          aria-label="test"
          class="styles__9pjq8o2"
          id="_r_20_"
          name="test"
          tabindex="-1"
          type="checkbox"
          value="choice"
        />
        <svg
          class="styles__9pjq8o3"
          fill="none"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="styles__9pjq8o4"
              height="16"
              rx="0.125rem"
              stroke-width="2"
              width="16"
              x="4"
              y="4"
            />
            <path
              class="styles__9pjq8o5"
              clip-rule="evenodd"
              d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
              fill="white"
              fill-rule="evenodd"
              height="9"
              width="12"
              x="5"
              y="4"
            />
          </g>
        </svg>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Checkbox card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > checkbox > renders correctly with tooltip prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn3: 1;"
    >
      <div
        aria-controls="_r_2c_"
        aria-describedby="_r_2c_"
        class="styles__w40vpo9 styles_fullHeight_true__w40vpoa"
        tabindex="0"
      >
        <div
          class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-checked="false"
          data-disabled="false"
          data-type="checkbox"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            aria-disabled="false"
            class="styles__475tndd styles__9pjq8o1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="styles__9pjq8o2"
              id="_r_2d_"
              name="test"
              tabindex="-1"
              type="checkbox"
              value="choice"
            />
            <svg
              class="styles__9pjq8o3"
              fill="none"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="styles__9pjq8o4"
                  height="16"
                  rx="0.125rem"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  class="styles__9pjq8o5"
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
              style="--_4k0ekn3: 1;"
            >
              <div
                class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                style="--_4k0ekn3: 1;"
              >
                <label
                  class="styles__9pjq8o7 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_2d_"
                >
                  test
                </label>
              </div>
            </div>
          </div>
          <div
            class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            data-has-default-cursor="false"
            data-has-label="false"
            style="--_4k0ekn0: 100%;"
          >
            Checkbox card
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with aria label 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: none; --_18vc4d32: auto;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="test"
            class="styles__17da2jl6"
            id="_r_5_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with checked prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="true"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: none; --_18vc4d32: auto;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="test"
            checked=""
            class="styles__17da2jl6"
            id="_r_b_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with complex children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="true"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="true"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="styles__17da2jl6"
            disabled=""
            id="_r_p_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            for="_r_p_"
          >
            test
          </label>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        <div
          style="background: gray; color: gray;"
        >
          Complex radio card
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="styles__17da2jl6"
            id="_r_1_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            for="_r_1_"
          >
            test
          </label>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with disabled prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="true"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: none; --_18vc4d32: auto;"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="true"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            aria-label="test"
            class="styles__17da2jl6"
            disabled=""
            id="_r_e_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with illustration 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_illustration__475tnd4 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__toi52u0 styles_alignItems_stretch_xxsmall__toi52u7 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%; --_4k0ekn3: 1;"
      >
        <div
          class="styles__475tnda styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles__17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="styles__17da2jl6"
                id="_r_t_"
                name="label-14"
                tabindex="-1"
                type="radio"
                value="label-14"
              />
              <svg
                class="styles__17da2jl7"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                for="_r_t_"
              >
                label
              </label>
            </div>
          </div>
          <div
            class="styles__475tndb styles__475tndc styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            data-has-default-cursor="false"
            data-has-label="true"
            style="--_4k0ekn0: 100%;"
          >
            Offer the best experience to your Mac, iPhone and iPad users with VNC, the remote desktop-sharing protocol. Learn more
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        />
        <div
          class="styles__475tnd8"
        >
          <img
            alt="illustration"
            class="styles__475tnd9"
            src="/src/components/SelectableCard/__tests__/illustrationTest.svg"
            width="220"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with indented disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="styles__17da2jl6"
            id="_r_11_"
            name="label-14"
            tabindex="-1"
            type="radio"
            value="label-14"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            for="_r_11_"
          >
            label
          </label>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="true"
        style="--_4k0ekn0: 100%;"
      >
        Offer the best experience to your Mac, iPhone and iPad users with VNC, the remote desktop-sharing protocol. Learn more
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with isError prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-error="true"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
          data-error="true"
        >
          <input
            aria-disabled="false"
            aria-invalid="true"
            class="styles__17da2jl6"
            id="_r_h_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
            for="_r_h_"
          >
            test
          </label>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Radio card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with productIcon 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_icon__475tnd3 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: 100%;"
      tabindex="0"
    >
      <div
        class="styles__toi52u0 styles_alignItems_stretch_xxsmall__toi52u7 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_space-between_xxsmall__toi52u77"
        style="--_4k0ekn0: 100%; --_4k0ekn3: 1;"
      >
        <div
          class="styles__475tnda styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles__17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="styles__17da2jl6"
                id="_r_15_"
                name="label-14"
                tabindex="-1"
                type="radio"
                value="label-14"
              />
              <svg
                class="styles__17da2jl7"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                for="_r_15_"
              >
                label
              </label>
            </div>
          </div>
          <div
            class="styles__475tndb styles__475tndc styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            data-has-default-cursor="false"
            data-has-label="true"
            style="--_4k0ekn0: 100%;"
          >
            Offer the best experience to your Mac, iPhone and iPad users with VNC, the remote desktop-sharing protocol. Learn more
          </div>
        </div>
        <div
          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_center_xxsmall__toi52u61"
        >
          <svg
            class="styles_large__11yzunl0 styles_primary__11yzunl5"
            height="64"
            viewBox="0 0 64 64"
            width="64"
          >
            <g
              class="MacMini"
            >
              <g
                class=".Square"
              >
                <path
                  class="fillWeak"
                  d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                  fill="#F1EEFC"
                />
              </g>
              <g
                class="Icon MacMini"
              >
                <g
                  class="MacMini"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                >
                  <path
                    class="fill"
                    d="M40 8.5c5.523 0 10 4.477 10 10v16c0 5.523-4.477 10-10 10h-7v5.17a3 3 0 0 1 1.83 1.83h13.334a1 1 0 0 1 .117 1.993l-.117.007H34.83a3.001 3.001 0 0 1-5.658 0H15a1 1 0 0 1-.117-1.993L15 51.5h14.171A3 3 0 0 1 31 49.67V44.5h-7c-5.523 0-10-4.477-10-10v-16c0-5.523 4.477-10 10-10zm-8 34h-8l-.25-.004A8 8 0 0 1 16 34.5v-16l.004-.25A8 8 0 0 1 24 10.5h16l.25.004A8 8 0 0 1 48 18.5v16l-.004.25A8 8 0 0 1 40 42.5zm0 9a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
                    fill="#521094"
                  />
                  <path
                    class="fillStrong"
                    d="M45 18.5a5 5 0 0 0-5-5H24a5 5 0 0 0-5 5v16a5 5 0 0 0 5 5h16a5 5 0 0 0 5-5zm-21-3h16l.176.005A3 3 0 0 1 43 18.5v16l-.005.176A3 3 0 0 1 40 37.5H24l-.176-.005A3 3 0 0 1 21 34.5v-16l.005-.176A3 3 0 0 1 24 15.5"
                    fill="#A060F6"
                  />
                  <path
                    class="fillStrong"
                    d="M34.5 24h-5v5h5zm-5-2a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h5a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2z"
                    fill="#A060F6"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with showTick 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd7 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      data-checked="false"
      data-disabled="false"
      data-type="radio"
      role="button"
      style="--_4k0ekn3: 1; --_18vc4d30: inline; --_18vc4d31: inline; --_18vc4d32: auto;"
      tabindex="0"
    >
      <div
        class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <div
          aria-disabled="false"
          class="styles__475tndd styles__17da2jl2"
          data-checked="false"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            aria-label="test"
            class="styles__17da2jl6"
            id="_r_8_"
            name="test"
            tabindex="-1"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__17da2jl7"
            viewBox="0 0 24 24"
          >
            <g>
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__17da2jl9"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__17da2jl8"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
        </div>
      </div>
      <div
        class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
        data-has-default-cursor="false"
        data-has-label="false"
        style="--_4k0ekn0: 100%;"
      >
        Checkbox card
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`selectableCard > radio > renders correctly with tooltip prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
      style="--_4k0ekn3: 1;"
    >
      <div
        aria-controls="_r_k_"
        aria-describedby="_r_k_"
        class="styles__w40vpo9 styles_fullHeight_true__w40vpoa"
        tabindex="0"
      >
        <div
          class="styles__475tnd0 styles_cursor_custom__475tnd1 styles_image_none__475tnd5 styles__475tnd6 styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          data-checked="false"
          data-disabled="false"
          data-type="radio"
          role="button"
          style="--_4k0ekn3: 1; --_18vc4d30: none; --_18vc4d31: inline; --_18vc4d32: 100%;"
          tabindex="0"
        >
          <div
            class="styles__17da2jl0 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-disabled="false"
              class="styles__475tndd styles__17da2jl2"
              data-checked="false"
            >
              <input
                aria-disabled="false"
                aria-invalid="false"
                class="styles__17da2jl6"
                id="_r_l_"
                name="test"
                tabindex="-1"
                type="radio"
                value="choice"
              />
              <svg
                class="styles__17da2jl7"
                viewBox="0 0 24 24"
              >
                <g>
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                    stroke-width="2"
                  />
                  <circle
                    class="styles__17da2jl9"
                    cx="12"
                    cy="12"
                    r="8"
                  />
                  <circle
                    class="styles__17da2jl8"
                    cx="12"
                    cy="12"
                    r="5"
                  />
                </g>
              </svg>
              <label
                class="styles__17da2jl3 styles__17da2jl4 style__m4c9ow0 style_prominence_default__m4c9ow4 style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a"
                for="_r_l_"
              >
                test
              </label>
            </div>
          </div>
          <div
            class="styles__475tndb styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
            data-has-default-cursor="false"
            data-has-label="false"
            style="--_4k0ekn0: 100%;"
          >
            Checkbox card
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
